some css tweaks and skill add , resume and fixes alignment !

--- a/src/App.css
+++ b/src/App.css
@@ -1,141 +1,133 @@
 @font-face {
-	font-family: 'iori';
-	src: url('fonts/Coolvetica.ttf.woff') format('woff'),
-		url('fonts/Coolvetica.ttf.svg#Coolvetica') format('svg'),
-		url('fonts/Coolvetica.ttf.eot'),
-		url('fonts/Coolvetica.ttf.eot?#iefix') format('embedded-opentype');
-	font-weight: normal;
-	font-style: normal;
+  font-family: "iori";
+  src: url("fonts/Coolvetica.ttf.woff") format("woff"),
+    url("fonts/Coolvetica.ttf.svg#Coolvetica") format("svg"),
+    url("fonts/Coolvetica.ttf.eot"),
+    url("fonts/Coolvetica.ttf.eot?#iefix") format("embedded-opentype");
+  font-weight: normal;
+  font-style: normal;
 }
 
 body {
-	font-family: 'iori';
+  font-family: "iori";
 }
 
 .h6 * {
-	font-weight: lighter !important;
+  font-weight: lighter !important;
 }
 
 .row.display-flex {
-	display: flex;
-	flex-wrap: wrap;
-
+  display: flex;
+  flex-wrap: wrap;
 }
 
-.row.display-flex>[class*='col-'] {
-	display: flex;
-	flex-direction: column;
-
+.row.display-flex > [class*="col-"] {
+  display: flex;
+  flex-direction: column;
 }
 
 .h-100 {
-	height: 100%;
-	;
+  height: 100%;
 }
 
 .intro * {
-	line-height: 0.8;
-	font-size: 3.7rem;
+  line-height: 0.8;
+  font-size: 3.7rem;
 }
 
 .intro {
-	padding-top: 30px;
+  padding-top: 30px;
 }
 
 .experience .link {
-	display: block;
+  display: block;
 }
 
 .clear-large {
-	margin: 50px;
-	display: block;
-	width: 100%;
+  margin: 50px;
+  display: block;
+  width: 100%;
 }
 
 .clear-xlarge {
-	margin: 80px;
-	display: block;
-	width: 100%;
+  margin: 80px;
+  display: block;
+  width: 100%;
 }
 
 .clear-medium {
-	margin: 30px;
-	display: block;
-	width: 100%;
+  margin: 30px;
+  display: block;
+  width: 100%;
 }
 
 .clear-small {
-	margin: 10px;
-	display: block;
-	width: 100%;
+  margin: 10px;
+  display: block;
+  width: 100%;
 }
 
 .title {
-	font-size: 3rem;
-	color: #08fdd8;
-	line-height: 1;
+  font-size: 3rem;
+  color: #08fdd8;
+  line-height: 1;
 }
 
 a {
-	font-size: 3rem;
-	color: #fd1056;
-	line-height: 1;
-	text-decoration: none;
+  font-size: 3rem;
+  color: #fd1056;
+  line-height: 1;
+  text-decoration: none;
 }
 
-a:hover{
-	text-decoration: none;
-	color: #08fdd8;
-	
-
-
+a:hover {
+  text-decoration: none;
+  color: #08fdd8;
 }
 
 .logoRImg {
-
-	max-width: 6%;
-	height: auto;
-
+  max-width: 6%;
+  height: auto;
 }
 
 .description {
-	margin-top: 10px;
-	font-family: 'Open Sans', sans-serif;
+  margin-top: 10px;
+  font-family: "Open Sans", sans-serif;
 }
 
 .skillName {
-	display: inline;
-	font-size: 0.8rem;
-	margin-bottom: 8px;
-	font-family: 'iori';
-	letter-spacing: 2px;
+  display: inline;
+  font-size: 0.9rem;
+  margin-bottom: 8px;
+  font-family: "iori";
+  letter-spacing: 2px;
 }
 
 /* iori */
 .badge-light {
-	letter-spacing: 0.1rem;
-	color: #212529;
-	background-color: #f8f9fa;
+  letter-spacing: 0.1rem;
+  color: #212529;
+  background-color: #f8f9fa;
 }
 
 .badge-warning {
-	color: #212529;
-	letter-spacing: 0.1rem;
-	background-color: #ffc107;
+  color: #212529;
+  letter-spacing: 0.1rem;
+  background-color: #ffc107;
 }
 
 .badge-dark {
-	letter-spacing: 0.1rem;
-	color: #fff;
-	background-color: #343a40;
+  letter-spacing: 0.1rem;
+  color: #fff;
+  background-color: #343a40;
 }
 
 .progress {
-	height: 1px;
+  height: 1px;
 }
 
-.skills>.col-6 {
-	margin-top: 23px;
+.skills > .col-6 {
+  margin-top: 23px;
 }
 
 /* #overlay {
@@ -152,84 +144,171 @@ a:hover{
 /* } */
 
 #mypicDiv:hover {
-	cursor: pointer;
+  cursor: pointer;
 }
 
 .link {
-	text-decoration: none;
-	color: white;
+  text-decoration: none;
+  color: white;
 }
 
 .link:hover {
-	opacity: 0.5;
-	text-decoration: none;
-	color: white;
+  opacity: 0.5;
+  text-decoration: none;
+  color: white;
 }
 
 .showTime {
-	float: right;
+  float: right;
 }
 
 .experience .showTime {
-	font-size: 0.8rem;
-	opacity: 0.6;
-	float: left;
+  font-size: 0.8rem;
+  opacity: 0.6;
+  float: left;
 }
 
 td {
-	border: none !important;
+  border: none !important;
 }
 
 @media (max-width: 1153px) {
-	.showTime {
-		float: left;
-		opacity: 0.6;
-		font-size: 0.8rem;
-	}
+  .showTime {
+    float: left;
+    opacity: 0.6;
+    font-size: 0.8rem;
+  }
 }
 
 @media (min-width: 1153px) {
-	.sticky {
-		position: -webkit-sticky;
-		position: sticky;
-		top: 0;
-	}
+  .sticky {
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+  }
 }
 
 @media (min-width: 1650px) {
-	.container-fluid {
-		max-width: 1500px;
-	}
+  .container-fluid {
+    max-width: 1500px;
+  }
 
-	.left-big-image {
-		padding: 50px !important;
-	}
+  .left-big-image {
+    padding: 50px !important;
+  }
 }
 
 @media (min-width: 1200px) {
-	#leftDiv {
-		padding-left: 20px;
-		height: 100%;
-	}
+  #leftDiv {
+    padding-left: 20px;
+    height: 100%;
+  }
 }
 
 @media (min-width: 1400px) {
-	#leftDiv {
-		padding-left: 100px;
-		height: 100%;
-	}
+  #leftDiv {
+    padding-left: 100px;
+    height: 100%;
+  }
 }
 
 *::-webkit-scrollbar {
-	width: 10px;
+  width: 10px;
 }
 
 *::-webkit-scrollbar-track {
-	background: #0D1117;
+  background: #0d1117;
 }
 
 *::-webkit-scrollbar-thumb {
-	background-color: white;
-	border-radius: 20px;
-	border: 3px solid #0D1117;
+  background-color: white;
+  border-radius: 20px;
+  border: 3px solid #0d1117;
+}
+
+/* Inline #1 | http://localhost:5173/ */
+
+.col,
+.col-1,
+.col-10,
+.col-11,
+.col-12,
+.col-2,
+.col-3,
+.col-4,
+.col-5,
+.col-6,
+.col-7,
+.col-8,
+.col-9,
+.col-auto,
+.col-lg,
+.col-lg-1,
+.col-lg-10,
+.col-lg-11,
+.col-lg-12,
+.col-lg-2,
+.col-lg-3,
+.col-lg-4,
+.col-lg-5,
+.col-lg-6,
+.col-lg-7,
+.col-lg-8,
+.col-lg-9,
+.col-lg-auto,
+.col-md,
+.col-md-1,
+.col-md-10,
+.col-md-11,
+.col-md-12,
+.col-md-2,
+.col-md-3,
+.col-md-4,
+.col-md-5,
+.col-md-6,
+.col-md-7,
+.col-md-8,
+.col-md-9,
+.col-md-auto,
+.col-sm,
+.col-sm-1,
+.col-sm-10,
+.col-sm-11,
+.col-sm-12,
+.col-sm-2,
+.col-sm-3,
+.col-sm-4,
+.col-sm-5,
+.col-sm-6,
+.col-sm-7,
+.col-sm-8,
+.col-sm-9,
+.col-sm-auto,
+.col-xl,
+.col-xl-1,
+.col-xl-10,
+.col-xl-11,
+.col-xl-12,
+.col-xl-2,
+.col-xl-3,
+.col-xl-4,
+.col-xl-5,
+.col-xl-6,
+.col-xl-7,
+.col-xl-8,
+.col-xl-9,
+.col-xl-auto {
+  padding-right: 10px;
+}
+/* For mobile devices */
+@media (max-width: 975px) {
+  .offset-sm-1 {
+    margin-left: 0 !important; /* Adjust as needed for mobile view */
+  }
+}
+
+For larger screens @media (min-width: 976px) {
+  .offset-sm-1 {
+    margin-left: 8.333333% !important ; /* Adjust as needed for laptop view */
+  }
 }
